attempted to set width height of all img elements to 100% to prevent stretching

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -20,16 +20,8 @@
 .gallery-img {
     flex: none;
     align-self: center;
-}
-.gallery-img-landscape {
     width: 100%;
-    height: auto;
-    min-height: 50%;
-}
-.gallery-img-portrait {
-    width: auto;
     height: 100%;
-    min-width: 50%;
 }
 .gallery-img-div {
     flex: none;
